--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world !
+<html>
+<head>
+    <title>Redirection en HTML</title>
+
+    <meta http-equiv="refresh" content="index.php">
+</head>
+
+<body>
+</body>
+
+</html>
