--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Redirection en HTML</title>
+    <meta http-equiv="refresh" content="1;url=index.php">
 </head>
 
 <body>
