--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </li>
                         <li><a href="#section1">Why Bootstrapious</a>
                         </li>
-                        <li><a href="#section2">About us</a>
+                        <li><a href="#section2">About us !</a>
                         </li>
                         <li><a href="#section3">Testimonials</a>
                         </li>
@@ -127,7 +127,6 @@
                                             <input class="btn btn-default" type="submit" value="Submit" name="_submit" id="frm-landingPage1-submit">
 
                                         </span>
-
                                     </div>
                                     <!-- /input-group -->
                                 </form>
