--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <div class="icon"><i class="fa fa-home"></i>
                                 </div>
                                 <h3 class="heading">Great home</h3>
-                                <p>Junk MTV quiz graced by fox whelps. </p>
+                                <p>Junk MTV quiz graced by fox whelps. !</p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
