--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                     <div class="container">
                         <div class="row">
 
-                            <h1 data-animate="fadeInDown">Whoa, what a landing page!</h1>
+                            <h1 data-animate="fadeInDown">Marine Louste</h1>
+                            <h3>Chargée de communication</h3>
                             <p  class="message" data-animate="fadeInUp">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back.</p>
 
 
