--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+.
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -75,21 +75,21 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand scrollTo" href="#intro">Landing Page</a>
+                    <a class="navbar-brand scrollTo" href="#intro">Marine Louste</a>
                 </div>
 
                 <div class="navbar-collapse collapse" id="navigation">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#intro">Intro</a>
+                        <li class="active"><a href="#intro">Qui suis-je ?</a>
                         </li>
-                        <li><a href="#section1">Why Bootstrapious</a>
+                        <li><a href="#section1">Mes expériences</a>
                         </li>
-                        <li><a href="#section2">About us !</a>
+                        <li><a href="#section2">Ma formation</a>
                         </li>
-                        <li><a href="#section3">Testimonials</a>
+                        <li><a href="#section3">Mes réalisations</a>
                         </li>
-                        <li><a href="#section4">Contact</a>
+                        <li><a href="#section4">Contactez-moi !</a>
                         </li>
                     </ul>
                 </div>
@@ -113,27 +113,9 @@
                         <div class="row">
 
                             <h1 data-animate="fadeInDown">Marine Louste</h1>
-                            <h3>Chargée de communication</h3>
-                            <p  class="message" data-animate="fadeInUp">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back.</p>
-
-
-                            <div class="col-md-6 col-md-offset-3" data-animate="fadeInUp">
-                                <form action="#" method="post" id="frm-landingPage1" class="form">
-                                    <div class="input-group">
-
-                                        <input type="text" class="form-control" placeholder="your email address" name="email" id="frm-landingPage1-email" required value="">
-
-                                        <span class="input-group-btn">
-
-                                            <input class="btn btn-default" type="submit" value="Submit" name="_submit" id="frm-landingPage1-submit">
-
-                                        </span>
-                                    </div>
-                                    <!-- /input-group -->
-                                </form>
-
-                                <p class="text-small">We will not sell or give your email to anyone. Promise.</p>
-                            </div>
+                            <h2>Chargée de communication</h2>
+                            <p> Jeune diplômée de l’ISEE Business School en management et communication, et également titulaire d’un master en édition, je souhaite aujourd’hui mettre mes compétences éditoriales au service de la valorisation d’une image de marque.</p>
+                          
 
                         </div>
                     </div>
@@ -142,6 +124,37 @@
 
             <!-- *** INTRO IMAGE END *** -->
 
+  <!-- *** ABOUT US ***
+        _________________________________________________________ -->
+
+            <div class="section  text-gray" id="section2">
+                <div class="container">
+                    <div class="col-md-12">
+
+
+                        <h2 class="title" data-animate="fadeInDown">Qui suis-je ?</h2>
+
+                        <div class="row">
+
+                            <div class="col-md-8 col-md-offset-2">
+
+                                <p class="text-large text-thin"  data-animate="fadeInUp">Five quacking zephyrs jolt my wax bed. Flummoxed by job, kvetching W. zaps Iraq. Cozy sphinx waves quart jug of bad milk. </p>
+                                <p class="text-large text-thin margin-bottom"  data-animate="fadeInUp">A very bad quack might jinx zippy fowls. Few quips galvanized the mock jury box. Quick brown dogs jump over the lazy fox. The jay, pig, fox, zebra, and my wolves quack! Blowzy red vixens fight for a quick jump. Joaquin Phoenix was gazed by MTV for luck. A wizard’s job is to vex chumps quickly in fog. Watch "Jeopardy!", Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz.</p>
+
+                                <p   data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- /.12 -->
+                </div>
+                <!-- /.container -->
+            </div>
+            <!-- /.section -->
+
+            <!-- *** ABOUT US END *** -->
 
 
             <!-- *** SERVICES ***
@@ -159,7 +172,7 @@
                                 <div class="icon"><i class="fa fa-home"></i>
                                 </div>
                                 <h3 class="heading">Great home</h3>
-                                <p>Junk MTV quiz graced by fox whelps. !</p>
+                                <p>Junk MTV quiz graced by fox whelps. </p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
@@ -212,37 +225,7 @@
             <!-- *** SERVICES END *** -->
 
 
-            <!-- *** ABOUT US ***
-        _________________________________________________________ -->
-
-            <div class="section  text-gray" id="section2">
-                <div class="container">
-                    <div class="col-md-12">
-
-
-                        <h2 class="title" data-animate="fadeInDown">About us</h2>
-
-                        <div class="row">
-
-                            <div class="col-md-8 col-md-offset-2">
-
-                                <p class="text-large text-thin"  data-animate="fadeInUp">Five quacking zephyrs jolt my wax bed. Flummoxed by job, kvetching W. zaps Iraq. Cozy sphinx waves quart jug of bad milk. </p>
-                                <p class="text-large text-thin margin-bottom"  data-animate="fadeInUp">A very bad quack might jinx zippy fowls. Few quips galvanized the mock jury box. Quick brown dogs jump over the lazy fox. The jay, pig, fox, zebra, and my wolves quack! Blowzy red vixens fight for a quick jump. Joaquin Phoenix was gazed by MTV for luck. A wizard’s job is to vex chumps quickly in fog. Watch "Jeopardy!", Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz.</p>
-
-                                <p   data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
-
-                            </div>
-
-                        </div>
-
-                    </div>
-                    <!-- /.12 -->
-                </div>
-                <!-- /.container -->
-            </div>
-            <!-- /.section -->
-
-            <!-- *** ABOUT US END *** -->
+          
 
             <!-- *** JOIN US ***
         _________________________________________________________ -->
