--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-.
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -62,7 +61,7 @@
 
     <body data-spy="scroll" data-target="#navigation" data-offset="120">
 
-
+    <a href="test.php">test</a>
         <!-- *** NAVBAR ***
         _________________________________________________________ -->
 
