--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
     </head>
 
     <body data-spy="scroll" data-target="#navigation" data-offset="120">
-
-    <a href="test.php">test</a>
         <!-- *** NAVBAR ***
         _________________________________________________________ -->
 
@@ -114,7 +112,7 @@
                             <h1 data-animate="fadeInDown">Marine Louste</h1>
                             <h2>Chargée de communication</h2>
                             <p> Jeune diplômée de l’ISEE Business School en management et communication, et également titulaire d’un master en édition, je souhaite aujourd’hui mettre mes compétences éditoriales au service de la valorisation d’une image de marque.</p>
-                          
+                            <a href="test.php">test</a>
 
                         </div>
                     </div>
@@ -137,10 +135,32 @@
 
                             <div class="col-md-8 col-md-offset-2">
 
-                                <p class="text-large text-thin"  data-animate="fadeInUp">Jeune diplômée de l’ISEE Business School en management et communication, et également titulaire d’un master en édition, mes 6 années d’expériences professionnelles m’ont amenée à travailler sur de nombreux projets : publication d’albums jeunesse, adaptation de projets éditoriaux pour la communication de grandes entreprises, ou encore vente et négociation commerciale dans le cadre de mes 3 années en librairie. Récemment chargée de communication au sein des Activités sociales de l’énergie, j’ai assuré le suivi des catalogues de vacances – pour lesquels je rédigeais notamment des contenus – et veillais à leur diffusion sur le web. J’ai également participé à la mise en place d’un nouveau plan de communication, intégrant plus largement le digital. Ce poste, ainsi que mes précédentes expériences professionnelles, notamment en tant que chargée d’édition, m’ont permis de consolider mes qualités rédactionnelles et de communication visuelle.</p>
-                                <p class="text-large text-thin margin-bottom"  data-animate="fadeInUp">Côté professionnel mis à part, je suis quelqu'un de très sociable et curieuse, toujours intéressée par les nouvelles rencontres et par l'apprentissage de nouvelles choses. Passionnée de littérature jeunesse, je suis aussi très intéressée par l'univers de la bande-dessinée franco-belge et les comics, bien que néophyte. J'aime aussi beaucoup le cinéma et les séries, pour lesquels mes goûts sont très éclectiques, de la science-fiction au biopic historique, en passant par la comédie et le film social. Quelques réalisateurs dont j'admire le travail : Ken Loach, Woody Allen, George Lucas, les Monty Python...</p>
+                                <p class="text-large text-thin"  data-animate="fadeInUp">
+                                    Jeune diplômée de l’ISEE Business School en management et communication, et également
+                                    titulaire d’un master en édition, mes 6 années d’expériences professionnelles m’ont
+                                    amenée à travailler sur de nombreux projets : publication d’albums jeunesse,
+                                    adaptation de projets éditoriaux pour la communication de grandes entreprises, ou
+                                    encore vente et négociation commerciale dans le cadre de mes 3 années en librairie.
+                                    Récemment chargée de communication au sein des Activités sociales de l’énergie, j’ai
+                                    assuré le suivi des catalogues de vacances – pour lesquels je rédigeais notamment
+                                    des contenus – et veillais à leur diffusion sur le web. J’ai également participé à
+                                    la mise en place d’un nouveau plan de communication, intégrant plus largement le
+                                    digital. Ce poste, ainsi que mes précédentes expériences professionnelles,
+                                    notamment en tant que chargée d’édition, m’ont permis de consolider mes qualités
+                                    rédactionnelles et de communication visuelle.
+                                </p>
+                                <p class="text-large text-thin margin-bottom"  data-animate="fadeInUp">
+                                    Côté professionnel mis à part, je suis quelqu'un de très sociable et curieuse,
+                                    toujours intéressée par les nouvelles rencontres et par l'apprentissage de
+                                    nouvelles choses. Passionnée de littérature jeunesse, je suis aussi très intéressée
+                                    par l'univers de la bande-dessinée franco-belge et les comics, bien que néophyte.
+                                    J'aime aussi beaucoup le cinéma et les séries, pour lesquels mes goûts sont très
+                                    éclectiques, de la science-fiction au biopic historique, en passant par la comédie
+                                    et le film social. Quelques réalisateurs dont j'admire le travail : Ken Loach,
+                                    Woody Allen, George Lucas, les Monty Python...
+                                </p>
 
-                                <p   data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
+                                <p data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
 
                             </div>
 
