Menu OK - Texte qui suis je modifié

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                 <div class="navbar-collapse collapse" id="navigation">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#intro">Qui suis-je ?</a>
+                        <li class="active"><a href="#section1">Qui suis-je ?</a>
                         </li>
-                        <li><a href="#section1">Mes expériences</a>
+                        <li><a href="#section2">Mes expériences</a>
                         </li>
-                        <li><a href="#section2">Ma formation</a>
+                        <li><a href="#section3">Ma formation</a>
                         </li>
-                        <li><a href="#section3">Mes réalisations</a>
+                        <li><a href="#section4">Mes réalisations</a>
                         </li>
-                        <li><a href="#section4">Contactez-moi !</a>
+                        <li><a href="#section5">Contactez-moi !</a>
                         </li>
                     </ul>
                 </div>
@@ -120,10 +120,10 @@
 
             <!-- *** INTRO IMAGE END *** -->
 
-  <!-- *** ABOUT US ***
+  <!-- *** QUI SUIS JE ***
         _________________________________________________________ -->
 
-            <div class="section  text-gray" id="section2">
+            <div class="section  text-gray" id="section1">
                 <div class="container">
                     <div class="col-md-12">
 
@@ -135,31 +135,24 @@
                             <div class="col-md-8 col-md-offset-2">
 
                                 <p class="text-large text-thin"  data-animate="fadeInUp">
-                                    Jeune diplômée de l’ISEE Business School en management et communication, et également
+                                    Diplômée de l’ISEE Business School en management et communication, et 
                                     titulaire d’un master en édition, mes 6 années d’expériences professionnelles m’ont
-                                    amenée à travailler sur de nombreux projets : publication d’albums jeunesse,
-                                    adaptation de projets éditoriaux pour la communication de grandes entreprises, ou
-                                    encore vente et négociation commerciale dans le cadre de mes 3 années en librairie.
-                                    Récemment chargée de communication au sein des Activités sociales de l’énergie, j’ai
-                                    assuré le suivi des catalogues de vacances – pour lesquels je rédigeais notamment
-                                    des contenus – et veillais à leur diffusion sur le web. J’ai également participé à
-                                    la mise en place d’un nouveau plan de communication, intégrant plus largement le
-                                    digital. Ce poste, ainsi que mes précédentes expériences professionnelles,
-                                    notamment en tant que chargée d’édition, m’ont permis de consolider mes qualités
-                                    rédactionnelles et de communication visuelle.
+                                    amenée à travailler sur de nombreux projets : redéfinition d'un plan de communication,
+                                    réalisation de catalogues, publication d’albums jeunesse, adaptation de projets éditoriaux
+                                    pour la communication de grandes entreprises, ou encore vente et négociation commerciale 
+                                    en librairie. Ces expériences professionnelles variées m’ont permis de consolider mes 
+                                    qualités rédactionnelles et de communication visuelle.
                                 </p>
                                 <p class="text-large text-thin margin-bottom"  data-animate="fadeInUp">
-                                    Côté professionnel mis à part, je suis quelqu'un de très sociable et curieuse,
-                                    toujours intéressée par les nouvelles rencontres et par l'apprentissage de
-                                    nouvelles choses. Passionnée de littérature jeunesse, je suis aussi très intéressée
-                                    par l'univers de la bande-dessinée franco-belge et les comics, bien que néophyte.
-                                    J'aime aussi beaucoup le cinéma et les séries, pour lesquels mes goûts sont très
-                                    éclectiques, de la science-fiction au biopic historique, en passant par la comédie
-                                    et le film social. Quelques réalisateurs dont j'admire le travail : Ken Loach,
-                                    Woody Allen, George Lucas, les Monty Python...
+                                    Professionnel mis à part, je suis sociable et curieuse, toujours avide de nouvelles 
+                                    rencontres et de nouveaux savoirs. Fervente lectrice de littérature jeunesse, je 
+                                    m'intéresse aussi à la bande-dessinée, bien que néophyte. Passionnée également de séries 
+                                    et de cinéma, mes goûts sont très éclectiques : de la science-fiction au biopic historique,
+                                    en passant par la comédie et le film social, j'apprécie tout autant un film de Ken Loach,
+                                    de Woody Allen ou un bon vieux Star Wars.
                                 </p>
 
-                                <p data-animate="fadeInUp"><img src="img/team.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
+                                <p data-animate="fadeInUp"><img src="img/profil.jpg" alt="" class="img-circle img-responsive ondra-michal"></p>
 
                             </div>
 
@@ -172,15 +165,15 @@
             </div>
             <!-- /.section -->
 
-            <!-- *** ABOUT US END *** -->
+            <!-- *** QUI SUIS JE END *** -->
 
 
-            <!-- *** SERVICES ***
+            <!-- *** MES EXPERIENCES ***
         _________________________________________________________ -->
-            <div class="section" id="section1">
+            <div class="section" id="section2">
                 <div class="container">
                     <div class="col-md-12">
-                        <h2 class="title" data-animate="fadeInDown">Why Bootstrapious?</h2>
+                        <h2 class="title" data-animate="fadeInDown">Mes expériences</h2>
 
                         <p class="lead">The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. </p>
 
@@ -240,20 +233,20 @@
             </div>
             <!-- /.section -->
 
-            <!-- *** SERVICES END *** -->
+            <!-- *** MES EXPERIENCES END *** -->
 
 
           
 
-            <!-- *** JOIN US ***
+            <!-- *** MA FORMATION ***
         _________________________________________________________ -->
 
-            <div class="section" data-animate="bounceIn">
+            <div class="section" id="section3" data-animate="bounceIn">
                 <div class="container">
                     <div class="col-md-8 col-md-offset-2">
 
 
-                        <h2 class="title">Join us for the fun!</h2>
+                        <h2 class="title">Ma formation</h2>
 
                         <p class="lead margin-bottom">Blowzy red vixens fight for a quick jump. Joaquin Phoenix was gazed by MTV for luck. A wizard’s job is to vex chumps quickly in fog. Watch "Jeopardy! ", Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz. Brawny gods just.</p>
 
@@ -287,18 +280,18 @@
             </div>
             <!-- /.section -->
 
-            <!-- *** JOIN US END *** -->      
+            <!-- *** MA FORMATION END *** -->      
 
-            <!-- *** TESTIMONIALS ***
+            <!-- *** MES REALISATIONS ***
 _________________________________________________________ -->
 
-            <div class="section text-gray" id="section3" data-animate="fadeInUp">
+            <div class="section text-gray" id="section4" data-animate="fadeInUp">
 
                 <div class="container">
                     <div class="col-md-12">
 
                         <div class="mb20">
-                            <h2 class="title" data-animate="fadeInUp">Customers said about us</h2>
+                            <h2 class="title" data-animate="fadeInUp">Mes réalisations</h2>
 
                             <p class="lead text-center" data-animate="fadeInUp">Quick, Baz, get my woven flax jodhpurs! "Now fax quiz Jack!" my brave ghost pled. </p> 
                         </div>
@@ -389,17 +382,17 @@ _________________________________________________________ -->
 
             </div><!-- /.section -->	
 
-            <!-- *** TESTIMONIALS END *** -->
+            <!-- *** MES REALISATIONS END *** -->
 
-            <!-- *** CONTACT ***
+            <!-- *** CONTACTEZ MOI ***
         _________________________________________________________ -->
 
-            <div class="section" id="section4" >
+            <div class="section" id="section5" >
                 <div class="container">
                     <div class="col-md-8 col-md-offset-2">
 
 
-                        <h2 class="title" data-animate="fadeInDown">Contact us</h2>
+                        <h2 class="title" data-animate="fadeInDown">Contactez-moi !</h2>
 
                         <p class="lead margin-bottom" data-animate="fadeInUp">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
 
