Texte "expériences" et modif section formation

--- a/index.html
+++ b/index.html
@@ -175,29 +175,47 @@
                     <div class="col-md-12">
                         <h2 class="title" data-animate="fadeInDown">Mes expériences</h2>
 
-                        <p class="lead">The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. </p>
+                        <p class="lead">Plus de 6 ans d'expériences, dans diverses sociétés et différents domaines d'activités.</p>
 
                         <div class="row services">
 
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-home"></i>
                                 </div>
-                                <h3 class="heading">Great home</h3>
-                                <p>Junk MTV quiz graced by fox whelps. </p>
+                                <h3 class="heading">2015 - 2016</h3>
+                                <h4 class="heading">Chargée de communication éditoriale</h4>
+                                <p>
+                                	Activités sociales de l'énergie (EDF/Engie)
+                                </p>
+                                <p>
+                                	Durant cette année, j'ai participé à la création et à la publication des 4 catalogues vacances, tirés à près de 200 000 exemplaires, destinés au personnel des industries électriques et gazières. J'ai également contribué à la définition d'un nouveau plan de communication, intégrant plus largement le digital, et travaillé avec les webmaster sur la mise en ligne des contenus des catalogues imprimés.
+                                </p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-shopping-cart"></i>
                                 </div>
-                                <h3 class="heading">Stuff we would buy ourselves</h3>
-                                <p>Bawds jog, flick quartz, vex nymphs. </p>
+                                <h3 class="heading">2012 - 2015</h3>
+                                <h4 class="heading">Libraire</h4>
+                                <p>
+                                	Librairie-Papeterie Malet, Boulogne-Billancourt / Librairies Fontaine, Paris / FNAC, La Défense
+                                </p>
+                                <p>
+                                	Spécialisée en jeunesse, mes missions consistaient à accueillir et conseiller les clients, mais aussi gérer les commandes, l'état des stocks, les achats, négocier et mettre en place des opérations commerciales...
+                                </p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-euro"></i> 
                                 </div>
-                                <h3 class="heading">Free trial</h3>
-                                <p>Waltz, bad nymph, for quick jigs vex! Fox nymphs grab quick-jived waltz. </p>
+                                <h3 class="heading">2010 - 2012</h3>
+                                <h4 class="heading">Chargée d'édition</h4>
+                                <p>
+                                	Scarabéa Jeunesse, Paris
+                                </p>
+                                <p>
+                                	Travaillant seule avec l'éditrice, j'ai contribué à la publication d'une vingtaine d'albums jeunesse. J'étais également en charge des outils de communication de l'entreprise : mise à jour du site web, création et diffusion de la newsletter, mise à jour de la page Facebook, création des fiches-produits à destination de nos représentants.
+                                </p>
                             </div>
 
                         </div>
@@ -206,22 +224,40 @@
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h3 class="heading">We will propagate your stuff</h3>
-                                <p>Brick quiz whangs jumpy veldt fox. Bright vixens jump; dozy fowl quack.</p>
+                                <h3 class="heading">2009 - 2010</h3>
+                                <h4 class="heading">Assistante éditoriale</h4>
+                                <p>
+                                	Hachette Partenariats, Paris
+                                </p>
+                                <p>
+                                	Durant ce stage de 6 mois, mes missions étaient d'adapter des ouvrages de notre fonds éditorial pour les transformer en outils de communication pour les entreprises : cadeaux clients, outils de promotion... J'ai également contribué à la création de plusieurs ouvrages pour nos partenaires.
+                                </p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-desktop"></i>
                                 </div>
-                                <h3 class="heading">Responsive web and app</h3>
-                                <p>Quick wafting zephyrs vex bold Jim. Quick zephyrs blow, vexing daft Jim. </p>
+                                <h3 class="heading">2009 - 2010</h3>
+                                <h4 class="heading">Assistante bibliothécaire</h4>
+                                <p>
+                                	Médiathèque Landowski, Boulogne-Billancourt
+                                </p>
+                                <p>
+                                	Vacataire les week-ends, en parallèle de mes études, j'avais pour missions d'accueillir, d'orienter et de conseiller les clients, mais aussi d'enregistrer les prêts et retours, et d'assurer la mise en rayon.
+                                </p>
                             </div>
 
                             <div class="col-md-4" data-animate="fadeInUp">
                                 <div class="icon"><i class="fa fa-heart-o"></i> 
                                 </div>
-                                <h3 class="heading">Dedicated support team</h3>
-                                <p>Quick, Baz, get my woven flax jodhpurs! "Now fax quiz Jack!" my brave ghost pled. </p>
+                                <h3 class="heading">2008</h3>
+                                <h3 class="heading">Assistante d'édition et de fabrication</h3>
+                                <p>
+                                	Editions de l'If
+                                </p>
+                                <p>
+                                	Durant ce stage de découverte du monde de l'édition, j'ai pu assister l'éditeur dans les tâches liées à la fabrication : devis, contact avec les imprimeurs, choix du papier... J'ai également réalisé des études de marché et mis en page une partie du catalogue.
+                                </p>
                             </div>
 
                         </div>
@@ -248,29 +284,92 @@
 
                         <h2 class="title">Ma formation</h2>
 
-                        <p class="lead margin-bottom">Blowzy red vixens fight for a quick jump. Joaquin Phoenix was gazed by MTV for luck. A wizard’s job is to vex chumps quickly in fog. Watch "Jeopardy! ", Alex Trebek's fun TV quiz game. Woven silk pyjamas exchanged for blue quartz. Brawny gods just.</p>
+                        <p class="lead margin-bottom">De l’école Estienne à l’ISEE Business School...</p>
 
 
                         <div class="row">
 
-                            <div class="col-md-8 col-md-offset-2">
+                           <div class="row services">
 
-
-                                <form action="#" method="post" id="frm-landingPage2" class="form">
-                                    <div class="input-group">
-
-                                        <input type="text" class="form-control" placeholder="your email address" name="email" id="frm-landingPage2-email" required value="">
-
-                                        <span class="input-group-btn">
-
-                                            <input class="btn btn-default" type="submit" value="Submit" name="_submit" id="frm-landingPage2-submit">
-
-                                        </span>
-
-                                    </div>
-                                    <!-- /input-group -->
-                                </form>
+                            <div class="col-md-4" data-animate="fadeInUp">
+                                <div class="icon"><i class="fa fa-home"></i>
+                                </div>
+                                <h3 class="heading">2015 - 2016</h3>
+                                <h4 class="heading">Master Management des entreprises, Spécialité Communication</h4>
+                                <p>
+                                	ISEE Business School, Paris
+                                </p>
+                                <p>
+                                	Projet : Réalisation d’un clip vidéo « The Vezelay case »
+                                </p>
+                                <p>
+                                	Mémoire : Communication environnementale et image de marque
+                                </p>
+                                <p>
+                                	Plus d’infos : https://www.isee.fr/formation/mastere-en-management/
+                                </p>
                             </div>
+
+                            <div class="col-md-4" data-animate="fadeInUp">
+                                <div class="icon"><i class="fa fa-shopping-cart"></i>
+                                </div>
+                                <h3 class="heading">2010 - 2012</h3>
+                                <h4 class="heading">Master Métiers du livre et de l'édition, Spécialité Edition</h4>
+                                <p>
+                                	Université Paris Ouest Nanterre La Défense, UFR SITEC, Saint-Cloud
+                                </p>
+                                <p>
+                                	Projet : Création d'un ouvrage documentaire sur le travail de l'illustratrice jeunesse Sara
+                                </p>
+                                <p>
+                                	Mémoire : La communication des éditeurs jeunesse et leur double cible
+                                </p>
+                                <p>
+                                	Plus d’infos : http://polemlivre.u-paris10.fr/formations/
+                                </p>
+                            </div>
+
+                            <div class="col-md-4" data-animate="fadeInUp">
+                                <div class="icon"><i class="fa fa-euro"></i> 
+                                </div>
+                                <h3 class="heading">2009 - 2010</h3>
+                                <h4 class="heading">Licence professionnelle Information et communication, Spécialité Edition</h4>
+                                <p>
+                                	Université Paris Ouest Nanterre La Défense, IUT de Saint-Cloud
+                                </p>
+                                <p>
+                                	Projet : Réalisation d'un album jeunesse en partenariat avec une école primaire de Saint-Ouen
+                                </p>
+                                <p>
+                                	Mémoire : Communiquer autrement par le livre
+                                </p>
+                                <p>
+                                	Plus d’infos : http://polemlivre.u-paris10.fr/formations/
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="row services">
+
+                            <div class="col-md-4" data-animate="fadeInUp">
+                                <div class="icon"><i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h3 class="heading">2007 - 2009</h3>
+                                <h4 class="heading">BTS Edition</h4>
+                                <p>
+                                	Ecole Estienne, Paris
+                                </p>
+                                <p>
+                                	Projet : Création d’un album jeunesse, du manuscrit au BAT
+                                </p>
+                                <p>
+                                	Mémoire de stage : Edition, l'envers du décor
+                                </p>
+                                <p>
+                                	Plus d’infos : http://www.ecole-estienne.paris/fr/formations/bts-edition
+                                </p>
+                            </div>                         
+
                         </div>
 
                     </div>
